Image Scan: error overflows text box fixed (#325)

--- a/dash/frontend/src/app/modules/private/pages/image/image-scan-result/image-scan-result.component.scss
+++ b/dash/frontend/src/app/modules/private/pages/image/image-scan-result/image-scan-result.component.scss
@@ -8,6 +8,7 @@
 
   .error-msg {
     padding: 0 10px 10px;
+    word-break: break-word;
   }
 }
 
